# docker_cpp_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists.txt  dockerapi-config.cmake.in  utils.cmake
examples/: CMakeLists.txt
examples/cli_example/: CMakeLists.txt  main.cpp
examples/container_example/: CMakeLists.txt  main.cpp
examples/example1/: CMakeLists.txt  images_json.json  inspect_container.json  inspect_image.json  main.cpp  ps_container.json
examples/shell_example/: CMakeLists.txt  main.cpp
include/: Docker.h
src/: CLI.cpp  Container.cpp  stdheaders.hpp
test/: CMakeLists.txt
tools/: CMakeLists.txt
tools/shell/: CMakeLists.txt
tools/shell/include/: Shell.h
tools/shell/src/: Shell.cpp  ShellBoost.hpp  ShellUnix.hpp  ShellWin32.hpp
