#####################################################
## DOCKER_HANDLER Library
#####################################################

set( DOCKER_HANDLER_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include" )
set( DOCKER_HANDLER_BIN "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set( DOCKER_HANDLER_LIB "${CMAKE_CURRENT_SOURCE_DIR}/lib")

add_library( docker_api SHARED IMPORTED GLOBAL )
target_compile_definitions( docker_api INTERFACE "DOCKER_HANDLER_SHARED_LIBRARY" )

set( DOCKER_API docker_api PARENT_SCOPE )
#set( DOCKER_HANDLER_RUNTIME_FILES "" )
#set( DOCKER_HANDLER_RUNTIME_FILES_DEBUG "" )

if( WIN32 )

	set_target_properties( docker_api PROPERTIES
		INTERFACE_INCLUDE_DIRECTORIES ${DOCKER_HANDLER_INCLUDE}
		IMPORTED_LOCATION "${DOCKER_HANDLER_BIN}/dockerapi.dll"
		IMPORTED_IMPLIB "${DOCKER_HANDLER_LIB}/dockerapi.lib"
		IMPORTED_LOCATION_RELEASE "${DOCKER_HANDLER_BIN}/dockerapi.dll"
		IMPORTED_IMPLIB_RELEASE "${DOCKER_HANDLER_LIB}/dockerapi.lib"
		IMPORTED_LOCATION_DEBUG "${DOCKER_HANDLER_BIN}/dockerapiD.dll"
		IMPORTED_IMPLIB_DEBUG "${DOCKER_HANDLER_LIB}/dockerapiD.lib"
	)
	
    #list( APPEND DOCKER_HANDLER_RUNTIME_FILES "${DOCKER_HANDLER_BIN}/dockerapi.dll" )
    #list( APPEND DOCKER_HANDLER_RUNTIME_FILES_DEBUG "${DOCKER_HANDLER_BIN}/dockerapiD.dll" )

elseif( UNIX )

	set_target_properties( docker_api PROPERTIES
		INTERFACE_INCLUDE_DIRECTORIES ${DOCKER_HANDLER_INCLUDE}
		IMPORTED_LOCATION "${DOCKER_HANDLER_LIB}/libdockerapi.so"
		IMPORTED_LOCATION_RELEASE "${DOCKER_HANDLER_LIB}/libdockerapi.so"
		IMPORTED_LOCATION_DEBUG "${DOCKER_HANDLER_LIB}/libdockerapiD.so"
	)

    #list( APPEND DOCKER_HANDLER_RUNTIME_FILES "${DOCKER_HANDLER_LIB}/libdockerapi.so" )
    #list( APPEND DOCKER_HANDLER_RUNTIME_FILES_DEBUG "${DOCKER_HANDLER_LIB}/libdockerapiD.so" )

endif()

get_target_property( DOCKER_HANDLER_RUNTIME_FILES docker_api LOCATION_RELEASE )
get_target_property( DOCKER_HANDLER_RUNTIME_FILES_DEBUG docker_api LOCATION_DEBUG )

set( DOCKER_HANDLER_RUNTIME_FILES ${DOCKER_HANDLER_RUNTIME_FILES} PARENT_SCOPE )
set( DOCKER_HANDLER_RUNTIME_FILES_DEBUG ${DOCKER_HANDLER_RUNTIME_FILES_DEBUG} PARENT_SCOPE )
set( DOCKER_HANDLER_INCLUDE_DIR ${DOCKER_HANDLER_INCLUDE} PARENT_SCOPE )
